# mettoolbox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .sourcery.yaml  .travis.yml  AUTHORS.rst  BADGES.rst  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.rst  VERSION  detox  gville_daymet.csv  publish.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: command_line.rst  conf.py  function_summary.rst
docsrc/: authors.rst  command_line.rst  conf.py  function_summary.rst  index.rst  installation.rst  usage.rst
mettoolbox/: __init__.py  disaggregate.py  evaplib.py  indices.py  meteolib.py  mettoolbox.py  pet.py  ret.py  utils.py
src/mettoolbox/: CHANGELOG.md  __init__.py  disaggregate.py  evaplib.py  indices.py  meteo_utils.py  meteolib.py  mettoolbox.py  mettoolbox_utils.py  pet.py  ret.py  solar_utils.py  solarpy.py  tdew.py  utils.py
tests/: Disaggregation_test.ipynb  combined.csv  data_daily_gainesville_precip.csv  data_evaporation.csv  data_gville_ws2m.csv  data_hourly_rad_pot.csv  data_obs_daily.csv  data_obs_hourly.csv  data_obs_hourly_glob.csv  data_obs_hourly_precip_hum.csv  data_obs_hourly_temp.csv  data_temperature_gainesville.csv  data_temperature_gainesville_mulitple_columns.csv  data_temperature_min_max.csv  gainesville_pet_daily.csv  readme.txt  test_disaggregate_temperature.py  test_mettoolbox.py
tests/rainmodel_temperature_data/: AVON.csv  BART.csv  BRAD.csv  BROOK.csv  BRUN.csv  BRUNA.csv  BUSH.csv  CLER.csv  CRES.csv  CROSS.csv  DAYT.csv  DEL.csv  EvapCoef.xlsx  FEDP.csv  FERNB.csv  FOLK.csv  FTDR.csv  FTPR.csv  GAINA.csv  GAINU.csv  GLEN.csv  HIGH.csv  INV.csv  JASP.csv  JAX.csv  JAXB.csv  KENAN.csv  KISS.csv  LACIT.csv  LALAN.csv  LEES.csv  LISB.csv  LIVEO.csv  MELB.csv  MTLAK.csv  OCALA.csv  OKEE.csv  ORL.csv  PAL.csv  PALM.csv  (+14 more)
tests/rainmodel_temperature_data/wsis_temperature/: BUSHNELL.txt  CLERMONT.txt  CRESCENT.txt  DAYTONA.txt  DELAND.txt  FEDPT.txt  FTDRUM.txt  GLNSTMRY.txt  GNSVILLE.txt  JAXAP.txt  JAXB.txt  LISBON.txt  MELB.txt  OCALA.txt  ORLANDO.txt  PALATKA.txt  RegionalAvg.txt  SANFORD.txt  STARKE.txt  STAUG.txt  TITUSV.txt  VEROAP.txt  evap.txt  locday1950.txt
