[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "oldest-supported-numpy"
]

[project]
name = "mettoolbox"
dynamic = ["readme", "version"]
description = "mettoolbox is set of command line and Python tools for the analysis and reporting of meteorological data."
dependencies = [
    "toolbox_utils >= 5.0.0, < 6.0.0",
    "tstoolbox",
    "cltoolbox",
    "solarpy",
    "standard-precip",
    "pydaymet",
    "pyet"
]
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
    "time-series",
    "cli-app",
    "meteorology",
    "evaporation",
    "precipitation",
    "climate",
    "weather",
    "climate-data",
    "climate-data-analysis",
    "climate-data-analysis-tools",
    "temperature",
    "humidity",
    "wind"
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "blacken-docs",
    "black-nbconvert",
    "cleanpy",
    "commitizen",
    "coverage[toml]",
    "isort",
    "mypy",
    "pre-commit",
    "pyflakes",
    "pylama",
    "pyle",
    "pylint",
    "pyre",
    "pyroma",
    "pytest",
    "pytest-cov",
    "pytest-mpl",
    "pyupgrade",
    "twine",
    "unimport",
    "velin",
    "vulture"
]

[project.scripts]
mettoolbox = "mettoolbox.mettoolbox:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/mettoolbox/docs/index.html#mettoolbox-documentation"
github = "https://github.com/timcera/mettoolbox"
bitbucket = "https://bitbucket.org/timcera/mettoolbox/src/main/"

[tool.check-manifest]
ignore = [
    ".travis.yml",
    "docs/_function_autosummary/*"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "6.0.4"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "tools*", "docs*", "mettoolbox.tests*"]
where = ["src"]

[tool.setuptools_scm]
