[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[simple]>=8",
    "setuptools>=80"
]

[project]
authors = [
    {email = "tim@cerazone.net", name = "Tim Cera"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "cltoolbox",
    "numpy",
    "pydaymet",
    "pyet",
    "tstoolbox"
]
description = "mettoolbox is set of command line and Python tools for the analysis and reporting of meteorological data."
dynamic = ["readme", "version"]
keywords = [
    "cli-app",
    "climate",
    "climate-data",
    "climate-data-analysis",
    "climate-data-analysis-tools",
    "evaporation",
    "humidity",
    "meteorology",
    "precipitation",
    "temperature",
    "time-series",
    "weather",
    "wind"
]
license = {text = "BSD-3-Clause"}
name = "mettoolbox"
requires-python = ">=3.10"

[project.scripts]
mettoolbox = "mettoolbox.mettoolbox:main"

[project.urls]
bitbucket = "https://bitbucket.org/timcera/mettoolbox/src/main/"
documentation = "https://timcera.bitbucket.io/mettoolbox/docs/index.html#mettoolbox-documentation"
github = "https://github.com/timcera/mettoolbox"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "7.1.1"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
